--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot 
         <div id="brand-logo">
           <div class="flex-horizontal">
             <img
-              src="Assets/Spotify logo.png"
+              src="./assets/Spotify logo.png"
               alt="Spotify logo"
               id="spotify-logo"
             />
@@ -26,15 +26,15 @@ Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot 
         </div>
         <div id="menu-options">
           <div class="menu-item flex-horizontal">
-            <img src="Assets/home.svg" alt="Home button" />
+            <img src="./assets/home.svg" alt="Home button" />
             <span>Home</span>
           </div>
           <div class="menu-item flex-horizontal">
-            <img src="Assets/search-white.svg" alt="Search button" />
+            <img src="./assets/search-white.svg" alt="Search button" />
             <span>Search</span>
           </div>
           <div class="menu-item flex-horizontal">
-            <img src="Assets/library.svg" alt="Library button" />
+            <img src="./assets/library.svg" alt="Library button" />
             <span>Your Library</span>
           </div>
         </div>
@@ -42,15 +42,15 @@ Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot 
 
         <div id="playlists">
           <div class="menu-item flex-horizontal">
-            <img src="Assets/Plus-small.svg" alt="Create Playlist" />
+            <img src="./assets/Plus-small.svg" alt="Create Playlist" />
             <span>Create Playlist</span>
           </div>
           <div class="menu-item flex-horizontal">
-            <img src="Assets/Heart.svg" alt="Home button" />
+            <img src="./assets/Heart.svg" alt="Home button" />
             <span>Liked Songs</span>
           </div>
           <div class="menu-item flex-horizontal">
-            <img src="Assets/media-podcast.svg" alt="Home button" />
+            <img src="./assets/media-podcast.svg" alt="Home button" />
             <span>Your Episodes</span>
           </div>
         </div>
@@ -62,11 +62,11 @@ Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot 
 
       <div id="center-content">
         <div class="flex-horizontal" id="search-area">
-          <span class="arrow"><img src="Assets/arrow-left.svg" alt="Left arrow" ></span>
-          <span class="arrow"><img src="Assets/arrow-right.svg" alt="Right arrow" ></span>
+          <span class="arrow"><img src="./assets/arrow-left.svg" alt="Left arrow" ></span>
+          <span class="arrow"><img src="./assets/arrow-right.svg" alt="Right arrow" ></span>
           <form>
             <div id="search-bar">
-              <img src="Assets/search.svg" alt="Search">
+              <img src="./assets/search.svg" alt="Search">
               <input type="text" placeholder="Artists, Songs or Podcasts">
             </div>
           </form>
@@ -91,7 +91,7 @@ Warp cable gunwalls tackle bucko black spot clipper spanker hulk Privateer. Long
     </section>
     <section class="flex-horizontal" id="footer">
       <div class="flex-horizontal" id="current-song">
-        <img src="Assets/tempscore.png" alt="" />
+        <img src="./assets/tempscore.png" alt="" />
         <div id="song-info">
           <span id="song">Unstoppable</span> <br />
           <span id="artist">The Score</span>
@@ -100,14 +100,14 @@ Warp cable gunwalls tackle bucko black spot clipper spanker hulk Privateer. Long
       </div>
       <div id="player">
         <div class="flex-horizontal" id="controls">
-          <img src="Assets/shuffle.svg" alt="shuffle button" />
-          <img src="Assets/skip-previous.svg" alt="skip previous" />
-          <img src="Assets/play.svg" alt="play" id="play"/>
-          <img src="Assets/skip-forward.svg" alt="skip forward" />
-          <img src="Assets/repeat-all.svg" alt="repeat" />
+          <img src="./assets/shuffle.svg" alt="shuffle button" />
+          <img src="./assets/skip-previous.svg" alt="skip previous" />
+          <img src="./assets/play.svg" alt="play" id="play"/>
+          <img src="./assets/skip-forward.svg" alt="skip forward" />
+          <img src="./assets/repeat-all.svg" alt="repeat" />
         </div>
         <div class="flex-horizontal" id="part-played">
-          <span>2:11</span> <img src="Assets/time-bar.svg" alt="time-bar" />
+          <span>2:11</span> <img src="./assets/time-bar.svg" alt="time-bar" />
           <span>2:42</span>
         </div>
       </div>    
