adding javascript & removing useless comments

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
 
-     <!--. Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.
-
-D
-
-Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot Shiver me timbers gangplank crack Jennys tea cup ballast Blimey lee snow crow's nest rutters. Fluke jib -->.
+ 
     <section id="main">
       <div id="sidebar">
         <div id="brand-logo">
@@ -38,7 +34,7 @@ Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot 
             <span>Your Library</span>
           </div>
         </div>
-<!--eadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.-->
+
 
         <div id="playlists">
           <div class="menu-item flex-horizontal">
@@ -85,9 +81,7 @@ Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot 
           <div class="browse-card4">New Release</div>
         </div>
       </div>
-      <!--Hail-shot warp holystone mizzenmast doubloon overhaul grapple red ensign fore Corsair. Yellow Jack scourge of the seven seas me gunwalls fire ship Nelsons folly boom barque clipper lee. Scourge of the seven seas killick pressgang no prey, no pay chantey lad hang the jib rum Spanish Main league.
 
-Warp cable gunwalls tackle bucko black spot clipper spanker hulk Privateer. Long clothes flogging cackle fruit mizzen skysail bilged on her anchor sloop Davy Jones' Locker Yellow Jack galleon. To go on account lugger swab mizzenmast weigh anchor cable Admiral of the Black parrel six pounders -->
     </section>
     <section class="flex-horizontal" id="footer">
       <div class="flex-horizontal" id="current-song">
@@ -110,6 +104,9 @@ Warp cable gunwalls tackle bucko black spot clipper spanker hulk Privateer. Long
           <span>2:11</span> <img src="./assets/time-bar.svg" alt="time-bar" />
           <span>2:42</span>
         </div>
-      </div>    
+      </div>   
+      
+      
+      <script src="app.js"></script>
   </body>
 </html>
